--- a/templates/layout.html
+++ b/templates/layout.html
@@ -7,12 +7,12 @@
     <title>Primera pagina del proyecto final</title>
     <!-- plantilla de css sacada de bootstrap-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}">
-    <!--url_for es una funcion de python que personalizara la pag con el archivo css-->
-</head>
+    {% block customcss%}
+    {% endblock %}
+    </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">Nombre o logo</a>
+        <a class="navbar-brand" href="#">Joyeria</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -22,14 +22,24 @@
                     <a class="nav-link" href="/">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="{{ url_for('show_products') }}">Features</a>
+                    <a class="nav-link" href="{{ url_for('show_products',category='Anillos') }}">Anillos</a>
+                    <!--indica que ejecute la funcion show_products de python-->
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{{ url_for('show_products',category='Productos') }}">Productos</a>
+                    <!--indica que ejecute la funcion show_products de python-->
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{{ url_for('show_products',category='Relojes') }}">Relojes</a>
                     <!--indica que ejecute la funcion show_products de python-->
                 </li>
             </ul>
         </div>
     </nav>
-    <!--En esta parte es donde iran las partes particulares de las paginas html-->
-    {% block content %}
-    {% endblock %}
+    <div class="container p-4">
+        <!--En esta parte es donde iran las partes particulares de las paginas html-->
+        {% block content %}
+        {% endblock %}
+    </div>
 </body>
 </html>
