--- a/templates/index.html
+++ b/templates/index.html
@@ -2,12 +2,11 @@
 <!--Indica que tomara todo el codigo de layout-->
 {% block content %}
 <div class="jumbotron">
-    <h1 class="display-4">Hello, world!</h1>
-    <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to
-        featured content or information.
+    <h1 class="display-4">Joyeria</h1>
+    <p class="lead">Esta es la pagina principal de su Joyeria amiga
     </p>
     <hr class="my-4">
-    <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
+    <p>Puede revisar nuestro catalogo y ordenar por internet o apersonarse a nuestras sucursales, estamos para servirle</p>
     <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
 </div>
 {% endblock %}
