--- a/templates/layout.html
+++ b/templates/layout.html
@@ -33,6 +33,10 @@
                     <a class="nav-link" href="{{ url_for('show_products',category='Relojes') }}">Relojes</a>
                     <!--indica que ejecute la funcion show_products de python-->
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{{ url_for('show_cart') }}">Carrito</a>
+                    <!--indica que ejecute la funcion show_products de python-->
+                </li>
             </ul>
         </div>
     </nav>
