--- a/templates/products.html
+++ b/templates/products.html
@@ -9,8 +9,9 @@
         {% for product in products %}
         <div class="col mb-4">
           <div class="card">
-            <a href="{{ url_for('home') }}">
+            <a href="{{ url_for('product_detail',product_name=product['nombre']) }}">
                 <img src= "{{url_for('static', filename=product['imagen'])}}" class="card-img-top" >
+
             </a>
             <div class="card-body">
               <h5 class="card-title">{{product['nombre']}}</h5>
