--- a/templates/product_detail.html
+++ b/templates/product_detail.html
@@ -11,7 +11,7 @@
         <div class="card-body">
             <h1 class="card-title">{{product['nombre']}}</h1>
             <h5 class="card-title">Precio: {{product['precio']}}</h5>
-            <!--<p class="card-text">{{product['descripcion']}}</p>   Descomentar cuando se cambie la descr-->
+            <p class="card-text">{{product['descripcion']}}</p>
             <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
             <form action="/add_to_cart" method="POST">
                 <div>
