--- a/templates/my_cart.html
+++ b/templates/my_cart.html
@@ -16,4 +16,9 @@
 <div>
     <h3 class="mt-0 mb-1">TOTAL: {{total}}</h3> 
 </div>
+<div class="col-auto my-1">
+    <a href="{{ url_for('complete_sale') }}">
+        <input type="submit" class="btn btn-primary" class="form-control" value="Completar venta">
+    </a>
+</div>
 {% endblock %}
