--- a/templates/update_one_product.html
+++ b/templates/update_one_product.html
@@ -6,7 +6,7 @@
 {% block content %}
 <h1>EDITAR PRODUCTO</h1><!--el uso de una variable que se manda al formulario-->
 <p>{{product['nombre']}}</p>
-<form action="/update_product" method="POST">
+<form action="/update_one_product" method="POST">
     <div class="form-group">
         <label for="staticEmail" class="col-sm-2 col-form-label">id producto: </label>
         <div class="col-sm-10">
@@ -44,9 +44,9 @@
         </div>
     </div>
     <div class="form-group">
-        <label for="staticEmail" class="col-sm-2 col-form-label">Cantidad: </label>
+        <label for="staticEmail" class="col-sm-2 col-form-label">Contado de ventas: </label>
         <div class="col-sm-10">
-          <input type="text" class="form-control" value="{{product['cant']}}" name="cant">
+          <input type="text" class="form-control" value="{{product['contador_ventas']}}" name="contador_ventas">
         </div>
     </div>
     <div class="form-group">
