Ya durmiendo algunas horas

--- a/templates/admin_view.html
+++ b/templates/admin_view.html
@@ -5,6 +5,11 @@
 {% endblock %}
 {% block content %}
 <h1>PRODUCTOS</h1><!--el uso de una variable que se manda al formulario-->
+<div class="col-auto my-1">
+  <a href="{{ url_for('newproduct') }}">
+      <input type="submit" class="btn btn-primary" class="form-control" value="Nuevo producto">
+  </a>
+</div>
 <table class="table table-striped table-dark">
     <thead>
       <tr>
