--- a/templates/layout.html
+++ b/templates/layout.html
@@ -26,7 +26,7 @@
                     <!--indica que ejecute la funcion show_products de python-->
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="{{ url_for('show_products',category='Productos') }}">Productos</a>
+                    <a class="nav-link" href="{{ url_for('show_products',category='Pulseras') }}">Pulseras</a>
                     <!--indica que ejecute la funcion show_products de python-->
                 </li>
                 <li class="nav-item">
