--- a/templates/my_cart.html
+++ b/templates/my_cart.html
@@ -1,18 +1,29 @@
 {% extends "layout.html" %}
+{% block customcss %}
+<link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}">
+    <!--url_for es una funcion de python que personalizara la pag con el archivo css-->
+<style>
+  .card-body {color: black;}
+</style>
+{% endblock %}
 {% block content %}
-<ul class="list-unstyled">
-    {% for product in cart %}
-    <li class="media">
-      <img src="{{url_for('static', filename=product['imagen'])}}" class="mr-3" width="20%" height="20%">
-      <div class="media-body">
+<h1>Carrito de compras</h1>
+{% for product in cart %}
+<div class="card mb-3" style="max-width: 440px; max-height: 300px;" >
+  <div class="row no-gutters">
+    <div class="col-md-4">
+      <img src="{{url_for('static', filename=product['imagen'])}}" class="mr-3" style="max-height:270px">
+    </div>
+    <div class="col-md-8">
+      <div class="card-body">
         <h3 class="mt-0 mb-1">{{product['nombre']}}</h3>
         <h4 class="mt-0 mb-1">Precio c/u: {{product['precio']}}</h4>
         <h4 class="mt-0 mb-1">Cantidad: {{product['cant_sale']}}</h4>   
-        <h4 class="mt-0 mb-1">Subtotal: {{product['subtotal']}}</h4>   
-      </div>
-    </li>
-    {% endfor %}
-</ul>
+        <h4 class="mt-0 mb-1">Subtotal: {{product['subtotal']}}      </div>
+    </div>
+  </div>
+</div>
+{% endfor %}
 <div>
     <h3 class="mt-0 mb-1">TOTAL: {{total}}</h3> 
 </div>
